tests/neg-scalajs/js-native-on-scala-type.check
-- Error: tests/neg-scalajs/js-native-on-scala-type.scala:6:0 ----------------------------------------------------------
6 |@js.native // error
  |^^^^^^^^^^
  |Classes, traits and objects not extending js.Any may not have an @js.native annotation
-- Error: tests/neg-scalajs/js-native-on-scala-type.scala:10:0 ---------------------------------------------------------
10 |@js.native // error
   |^^^^^^^^^^
   |Classes, traits and objects not extending js.Any may not have an @js.native annotation
-- Error: tests/neg-scalajs/js-native-on-scala-type.scala:13:0 ---------------------------------------------------------
13 |@js.native // error
   |^^^^^^^^^^
   |Classes, traits and objects not extending js.Any may not have an @js.native annotation
-- Error: tests/neg-scalajs/js-native-on-scala-type.scala:19:0 ---------------------------------------------------------
19 |@js.native // error
   |^^^^^^^^^^
   |Classes, traits and objects not extending js.Any may not have an @js.native annotation
-- Error: tests/neg-scalajs/js-native-on-scala-type.scala:22:0 ---------------------------------------------------------
22 |@js.native // error
   |^^^^^^^^^^
   |Classes, traits and objects not extending js.Any may not have an @js.native annotation
-- Error: tests/neg-scalajs/js-native-on-scala-type.scala:26:0 ---------------------------------------------------------
26 |@js.native // error
   |^^^^^^^^^^
   |Classes, traits and objects not extending js.Any may not have an @js.native annotation
